# elle

./: .gitignore  .gitmodules  .mcp.json  AB.md  AGENTS.md  ARCHITECTURAL_ISSUE.md  ARCHITECTURE_QUICK_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN_REVIEW.md  DEVLOG.md  ELLE_FILE_IO_ANALYSIS.md  ERROR_INVENTORY.csv  ERROR_INVENTORY_SUMMARY.md  EXPLORATION_SUMMARY.md  FILE_PATHS_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  Makefile  PARSER_EXPLORATION_INDEX.md  PARSER_REDESIGN.md  PHASE9_ANALYSIS.md  PHASE9_COMPLETE.md  PIPE_AUDIT.md  PROPERTY_TEST_ANALYSIS.md  QUICKSTART.md  README.md  REFACTORING_ANALYSIS.md  ROADMAP.md  SCOPE_ANALYSIS_INDEX.txt  SCOPE_EXECUTIVE_SUMMARY.md  SCOPE_QUICK_REFERENCE.md  START_HERE.md  SYNTAX_AND_CI_PROPOSAL.md  UNIMPLEMENTED_FEATURES.md.archived  VERIFICATION_SUMMARY.md  build.rs  codecov.yml  (+31 more)
.cargo/: config.toml
.claude/plans/: misty-wondering-sprout.md  perceus.md
.githooks/: pre-commit
.github/: BRANCH_PROTECTION.md  CODEOWNERS  MERGE_STRATEGY.md
.github/workflows/: ci.yml  main.yml  merge-queue.yml  pr.yml  weekly.yml
.pi/extensions/: mcp.ts
aws-sigv4-demo/: impl.md  plan.md  real.md  report.md  value-repr-report.md
benches/: AGENTS.md  README.md  benchmarks.rs  cranelift_jit_benchmarks.rs  iai_benchmarks.rs  jit_vs_bytecode.rs  memory.rs
demos/: AGENTS.md  README.md  jit_benchmark.lisp  jit_benchmark_contrived.lisp  logo.lisp  syntax.js  syntax.lua  syntax.py
demos/aws-sigv4/: README.md  sigv4.lisp  sigv4.scm
demos/blas/: README.md  blas.lisp
demos/cfgviz/: Makefile  README.md  cfgviz.lisp  eval-expr.dot  factorial.dot  fizzbuzz.dot  identity.dot  make-adder.dot
demos/conway/: AGENTS.md  README.md  conway.lisp
demos/docgen/: AGENTS.md  README.md  generate.lisp
demos/egui/: counter.lisp  smoke.lisp
demos/embedding/: AGENTS.md  Cargo.toml  Makefile  chost  hello.lisp  host.c
demos/fib/: README.md  fib.janet  fib.js  fib.lisp  fib.lua  fib.py  fib.scm
demos/gpu/: mandelbrot.lisp  vecadd.lisp
demos/logo/: README.md  logo.lisp
demos/mandelbrot/: AGENTS.md  README.md  mandelbrot.lisp
demos/matrix/: README.md  matrix.lisp
demos/matrix-ops/: matrix-pure.lisp.cl  matrix-pure.scm
demos/microgpt/: autograd.lisp  helpers.lisp  input.txt  microgpt.lisp  model.lisp
demos/nqueens/: README.md  nqueens-array.lisp  nqueens.janet  nqueens.lisp  nqueens.lisp.cl  nqueens.lua  nqueens.scm
demos/progress-bar/: AGENTS.md  README.md  (+1 more)
docs/: AGENTS.md  BUILTINS.md  CONTROL_FLOW.md  CPS_DESIGN.md  CPS_REWORK.md  DEBUGGING.md  EFFECTS.md  EXCEPT.md  FIBERS.md  JANET-COMPILER.md  JANET.md  LANGUAGE_GUIDE.md  LEXICAL_SCOPE_REFACTOR.md  MACROS.md  MACROS_IMPL.md  README.md  SCOPING_GUIDE.md  SEMANTICS.md  WHAT_S_NEW.md  allocator-impl.md  allocator-plan.md  arrays.md  bindings.md  builtins.md  bytes.md  coming-from.md  compilation-cache-current.md  compilation-cache-plan.md  concurrency.md  config.md  control-flow.md  control.md  cookbook.md  coroutines.md  debugging.md  destructuring-advanced.md  destructuring.md  effects.md  embedding.md  empty-list.md  (+51 more)
elle-doc/: generate.lisp
elle-lint/: AGENTS.md  Cargo.toml  README.md
elle-lsp/: AGENTS.md  Cargo.toml  README.md
elle-lsp/examples/: demo.l  demo.lisp
elle-lsp/src/: compiler_state.rs  completion.rs  definition.rs  formatting.rs  handler.rs  hover.rs  lib.rs  main.rs  protocol.rs  references.rs  rename.rs
elle-lsp/tests/: integration_test.rs  lsp_spec_compliance.rs
elle-plugin/: AGENTS.md  Cargo.toml
examples/: AGENTS.md  README.md  advanced-exception-handling.lisp  allocator.lisp  arena.lisp  arithmetic.l  assertions.lisp  async_io.lisp  basics.lisp  benchmarks.lisp  chan.lisp  closures-and-lambdas.l  closures-and-lambdas.lisp  closures-phase4.lisp  closures.lisp  collections.lisp  concurrency-spawn-join.lisp  concurrency.lisp  conditions.lisp  control-flow.lisp  control.lisp  coroutines.elle  coroutines.lisp  debugging-profiling.lisp  debugging.lisp  destructuring.lisp  effects.elle  effects.lisp  errors.lisp  exception-filtering.l  exception-handling-comprehensive.lisp  exception-handling.l  exception-handling.lisp  exceptions.lisp  ffi-callbacks-demo.l  ffi.lisp  ffi.lisp.disabled  fiber-error-resume.lisp  fibonacci.l  file-io.lisp  (+63 more)
inspiration/: AGENTS.md  janet-destructuring.md  janet.md
lib/: AGENTS.md  README.md  agent.lisp  aws.lisp  base64.lisp  cairo.lisp  cli.lisp  color.lisp  compress.lisp  contract.lisp  differential.lisp  dns.lisp  egui.lisp  git.lisp  glob.lisp  gpu.lisp  grpc.lisp  gtk4.lisp  hash.lisp  http.lisp  http2.lisp  irc.lisp  lua.lisp  mqtt.lisp  portrait.lisp  process.lisp  raylib.lisp  rdf.lisp  redis.lisp  resource.lisp  rust-rdf.lisp  sdl.lisp  sdl3.lisp  semver.lisp  spirv.lisp  sqlite.lisp  svg.lisp  sync.lisp  telemetry.lisp  tls.lisp  (+5 more)
plugins/: AGENTS.md  README.md
refactor/: PLAN.md  SUMMARY.md  VALUE_PROGRESS.md
scripts/: add-epoch.lisp  rename-epoch-tag.lisp
spike/: gtk4-api-test.lisp  gtk4-callback.lisp  gtk4-webview.lisp  gtk4-window.lisp
src/: AGENTS.md  README.md  arithmetic.rs  config.rs  context.rs  error.rs  ffi_primitives.rs  lib.rs  main.rs  path.rs  pipeline.rs  plugin.rs  plugin_api.rs  port.rs  primitives.rs  reader.rs  repl.rs  resolve.rs  symbol.rs  trace.rs  value.rs
templates/: binding-generator.lisp
test-modules/: counter.lisp  list-lib.lisp  math-lib.l  test.l  test.lisp
tests/: AGENTS.md  README.md  git.elle  git.lisp  h2-flow-control.lisp  h2-same-scheduler.lisp  h2-server.lisp  lib.rs  proptest-regressions  wasm_smoke.rs  wasm_stdlib.rs
tools/: add-epoch.lisp  bug-repro.lisp  demo-queries.lisp  elle-graph.lisp  find-substr.lisp  load-all.lisp  mcp-server.lisp  portrait-demo.lisp  q.lisp  query.lisp  remove-assert-imports.lisp  rename-epoch-tag.lisp  run-elle.sh  run-graph.sh  rust-graph.lisp  rust-rdf-lib.lisp  semantic-graph.lisp  test-eval.lisp  test-mcp.lisp  test-oxigraph-load.lisp  test-semantic.lisp
trash/: FFI_ROADMAP.md  PARSER_ANALYSIS.md  README.md  SCOPE_ANALYSIS_README.md  SCOPE_ANALYSIS_REPORT.md  SCOPE_IMPLEMENTATION_ROADMAP.md
(+1202 files in other folders)
