[workspace]
members = [".", "plugins/regex", "plugins/crypto", "plugins/sqlite", "plugins/random", "plugins/selkie", "plugins/glob", "plugins/oxigraph", "plugins/base64", "plugins/compress", "plugins/csv", "plugins/toml", "plugins/yaml", "plugins/semver", "plugins/uuid", "plugins/xml", "plugins/syn", "plugins/git", "plugins/msgpack", "plugins/tls"]
resolver = "2"

[package]
name = "elle"
version = "1.0.0"
edition = "2021"

[dependencies]
bumpalo = "3"
mimalloc = "0.1"
rustc-hash = "2.0"
smallvec = "1.11"
libloading = "0.8"
libffi = "5.1"
rustyline = "14"
libc = "0.2"
serde_json = "1.0"
unicode-segmentation = "1"
crossbeam-channel = "0.5"

# Path manipulation (UTF-8 paths, lexical normalization, relative paths)
camino = "1.2"
path-clean = "1.0"
pathdiff = { version = "0.2", features = ["camino"] }

# Async I/O (Linux io_uring)
io-uring = "0.7"

# JIT compilation
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-jit = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.13"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
iai-callgrind = "0.11"
stats_alloc = { version = "0.1.10", features = ["nightly"] }

[features]
default = []

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.profiling]
inherits = "release"
strip = false
debug = "line-tables-only"

[profile.bench]
inherits = "release"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "iai_benchmarks"
harness = false

[[bench]]
name = "memory"
harness = false
