[workspace]
members = [
    ".",
    "plugins/arrow",
    "plugins/crypto",
    "plugins/csv",
    "plugins/hash",
    "plugins/jiff",
    "plugins/mqtt",
    "plugins/msgpack",
    "plugins/oxigraph",
    "plugins/polars",
    "plugins/protobuf",
    "plugins/random",
    "plugins/regex",
    "plugins/image",
    "plugins/selkie",
    "plugins/svg",
    "plugins/syn",
    "plugins/tls",
    "plugins/toml",
    "plugins/tree-sitter",
    "plugins/vulkan",

    "plugins/xml",
    "plugins/yaml",
    "plugins/egui",
]
resolver = "2"

[package]
name = "elle"
version = "1.0.0"
edition = "2021"
description = "A Lisp with static signal inference, hygienic macros, and colorless concurrency via fibers"
license = "MIT"
repository = "https://github.com/elle-lisp/elle"
authors = ["Andy Davidoff"]

[dependencies]
bumpalo = "3"
mimalloc = "0.1"
rustc-hash = "2.0"
smallvec = "1.11"
libloading = "0.8"
libffi = "5.1"
rustyline = "14"
libc = "0.2"
serde_json = "1.0"
tempfile = "3"
unicode-segmentation = "1"
crossbeam-channel = "0.5"

# Path manipulation (UTF-8 paths, lexical normalization, relative paths)
camino = "1.2"
path-clean = "1.0"
pathdiff = { version = "0.2", features = ["camino"] }

# JIT compilation
cranelift-codegen = "0.130"
cranelift-frontend = "0.130"
cranelift-module = "0.130"
cranelift-jit = "0.130"
cranelift-native = "0.130"
target-lexicon = "0.13"

# WASM backend (optional, enable with --features wasm)
wasmtime = { version = "43", features = ["incremental-cache"], optional = true }
wasm-encoder = { version = "0.245", optional = true }

# MLIR backend (optional, requires LLVM 22 + MLIR)
melior = { version = "0.27", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
stats_alloc = { version = "0.1.10", features = ["nightly"] }

[features]
default = []
wasm = ["wasmtime", "wasm-encoder"]
mlir = ["melior"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"

[patch.crates-io]
wasmparser = { path = "patches/wasmparser" }

[profile.profiling]
inherits = "release"
strip = false
debug = "line-tables-only"

[profile.bench]
inherits = "release"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "memory"
harness = false

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"
