[workspace]
members = [
    ".",
    "elle-plugin",
    "demos/embedding",
]
resolver = "2"

[package]
name = "elle"
version = "1.0.0"
edition = "2021"
description = "A Lisp with static signal inference, hygienic macros, and colorless concurrency via fibers"
license = "MIT"
repository = "https://github.com/elle-lisp/elle"
authors = ["Andy Davidoff"]

[dependencies]
bumpalo = "3"
rustc-hash = "2.0"
smallvec = "1.11"
libloading = "0.8"
libffi = { version = "5.1", optional = true }
rustyline = "14"
libc = "0.2"
serde_json = "1.0"
tempfile = "3"
unicode-segmentation = "1"
crossbeam-channel = "0.5"

# Path manipulation (UTF-8 paths, lexical normalization, relative paths)
camino = "1.2"
path-clean = "1.0"
pathdiff = { version = "0.2", features = ["camino"] }

# JIT compilation (optional, enable with --features jit; on by default)
cranelift-codegen = { version = "0.131", optional = true }
cranelift-frontend = { version = "0.131", optional = true }
cranelift-module = { version = "0.131", optional = true }
cranelift-jit = { version = "0.131", optional = true }
cranelift-native = { version = "0.131", optional = true }
target-lexicon = { version = "0.13", optional = true }

# WASM backend (optional, enable with --features wasm)
wasmtime = { version = "44", features = ["incremental-cache"], optional = true }
wasm-encoder = { version = "0.246", optional = true }

# MLIR backend (optional, requires LLVM 22 + MLIR)
melior = { version = "0.27", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
stats_alloc = { version = "0.1.10", features = ["nightly"] }

[features]
default = ["jit", "ffi"]
ffi = ["libffi"]
jit = ["cranelift-codegen", "cranelift-frontend", "cranelift-module", "cranelift-jit", "cranelift-native", "target-lexicon"]
wasm = ["wasmtime", "wasm-encoder"]
mlir = ["melior"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.profiling]
inherits = "release"
strip = false
debug = "line-tables-only"

[profile.bench]
inherits = "release"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "memory"
harness = false

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"
