[package]
name = "elle-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
elle = { path = ".." }
elle-lint = { path = "../elle-lint" }
lsp-types = "0.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "elle-lsp"
path = "src/main.rs"

[lib]
name = "elle_lsp"
path = "src/lib.rs"
